<resources>
    <string name="app_name">PenguinPay</string>

    <string name="action_start">Start now</string>
    <string name="action_continue">Continue</string>
    <string name="action_send">Send</string>
    <string name="action_try_again">Try again</string>
    <string name="action_finish">Back to beginning</string>

    <string name="label_insert_recipient_data">Insert the recipient data</string>
    <string name="label_send_money_to">Recipient</string>
    <string name="label_receive">Receive:</string>
    <string name="label_intro">Transfer money quickly from Binaria to Africa.</string>
    <string name="label_sub">Exchange your money instantly whenever you want.</string>
    <string name="label_available_countries">Available countries:\nKenya, Nigeria, Tanzania, and Uganda.</string>
    <string name="label_error">Something went wrong!\nPlease try again.</string>
    <string name="label_receipt">Your transaction is being sent.</string>
    <string name="label_receipt_subtitle">See how easy it was? Feel free to send money to your family and friends again!</string>
    <string name="label_success">Success!</string>

    <string name="hint_first_name">First Name</string>
    <string name="hint_last_name">Last name</string>
    <string name="hint_country">Country</string>
    <string name="hint_phone">Phone Number</string>
    <string name="hint_send">Send</string>
    <string name="hint_zero">0</string>

    <string name="title_recipient">Recipient</string>
    <string name="title_send_money">Send Money</string>

    <string name="prefix_currency">BN$&#160;</string>

    <string name="helper_text">Exchange rate: %.2f</string>
</resources>