<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/windowBackgroundColor"
        android:padding="@dimen/default_dimen"
        tools:context=".ui.intro.IntroFragment">

        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:src="@mipmap/ic_launcher"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.25"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_marginTop="@dimen/small_dimen"
            android:id="@+id/tvAppName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/primaryDarkColor"
            android:textSize="@dimen/text_size_big"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivLogo" />

        <TextView
            android:id="@+id/tvMessage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/big_dimen"
            android:gravity="center"
            android:text="@string/label_intro"
            android:textSize="@dimen/text_size_medium"
            app:layout_constraintBottom_toTopOf="@id/tvCountries"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvAppName"
            app:layout_constraintVertical_bias="0.15" />


        <TextView
            android:id="@+id/tvCountries"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/default_dimen"
            android:gravity="center"
            android:text="@string/label_available_countries"
            android:textColor="@color/primaryDarkColor"
            android:textSize="@dimen/text_size_small"
            app:layout_constraintBottom_toTopOf="@id/btStart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btStart"
            style="@style/Widget.PenguinPay.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_start"
            app:layout_constraintBottom_toBottomOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
