<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.samfonsec.penguinpay.ui.recipient.RecipientViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/windowBackgroundColor"
        tools:context=".ui.intro.IntroFragment">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                style="@style/Widget.PenguinPay.Toolbar"
                app:title="@string/title_recipient" />

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/glStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/default_dimen" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/glEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/default_dimen" />

        <TextView
            android:id="@+id/tvLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_dimen"
            android:textColor="@color/primaryColor"
            android:text="@string/label_insert_recipient_data"
            android:textAlignment="center"
            android:textSize="@dimen/text_size_medium"
            app:layout_constraintEnd_toEndOf="@id/glEnd"
            app:layout_constraintStart_toStartOf="@id/glStart"
            app:layout_constraintTop_toBottomOf="@id/appBar"
            tools:maxLength="390" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tiName"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/big_dimen"
            android:hint="@string/hint_first_name"
            app:layout_constraintEnd_toEndOf="@id/glEnd"
            app:layout_constraintStart_toStartOf="@id/glStart"
            app:layout_constraintTop_toBottomOf="@id/tvLabel">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etName"
                style="@style/Widget.PenguinPay.EditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@={vm.recipient.firstName}" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tiLastName"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_dimen"
            android:hint="@string/hint_last_name"
            app:layout_constraintEnd_toEndOf="@id/glEnd"
            app:layout_constraintStart_toStartOf="@id/glStart"
            app:layout_constraintTop_toBottomOf="@id/tiName">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etLastName"
                style="@style/Widget.PenguinPay.EditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:imeOptions="actionUnspecified"
                android:text="@={vm.recipient.lastName}" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tiCountry"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="@dimen/text_input_height"
            android:layout_marginTop="@dimen/default_dimen"
            android:hint="@string/hint_country"
            app:endIconMode="dropdown_menu"
            app:layout_constraintEnd_toEndOf="@id/glEnd"
            app:layout_constraintStart_toStartOf="@id/glStart"
            app:layout_constraintTop_toBottomOf="@id/tiLastName">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/etCountry"
                style="@style/Widget.PenguinPay.EditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:focusable="false"
                android:paddingStart="@dimen/default_dimen"
                android:text="@={vm.recipient.country}"
                tools:ignore="RtlSymmetry" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tiPhone"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_dimen"
            android:enabled="false"
            android:gravity="center_vertical"
            android:hint="@string/hint_phone"
            app:layout_constraintEnd_toEndOf="@id/glEnd"
            app:layout_constraintStart_toStartOf="@id/glStart"
            app:layout_constraintTop_toBottomOf="@id/tiCountry"
            app:prefixTextAppearance="@style/TextAppearance.PenguinPay.TextInput">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPhone"
                style="@style/Widget.PenguinPay.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:text="@={vm.recipient.phone}" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btContinue"
            style="@style/Widget.PenguinPay.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_dimen"
            android:enabled="@{vm.recipient.isValid}"
            android:text="@string/action_continue"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
